--- a/about_me.html
+++ b/about_me.html
@@ -42,7 +42,7 @@
     </p>
 
     <h2>Oven Baked Spaghetti</h2>
-    <img class="food-image" src="C:\Users\adity\OneDrive\Tufts University Online MS CS\2024\Fall Sem\CS 120\assignment 2\Images\Oven Baked Lasagna.jpg" alt="Your Favorite Food">
+    <img class="food-image" src="Images\Oven Baked Lasagna.jpg" alt="Your Favorite Food">
     <p>I love eating Oven Baked Lasagna that's fresh out of the oven with marinara sauce and baked in cheese.</p>
 
     
