--- a/about_me.html
+++ b/about_me.html
@@ -42,7 +42,7 @@
     </p>
 
     <h2>Oven Baked Spaghetti</h2>
-    <img class="food-image" src="Images\Oven Baked Lasagna.jpg" alt="Your Favorite Food">
+    <img class="food-image" src="images\Oven Baked Lasagna.jpg" alt="Your Favorite Food">
     <p>I love eating Oven Baked Lasagna that's fresh out of the oven with marinara sauce and baked in cheese.</p>
 
     
@@ -58,14 +58,14 @@
         </tr>
         <tr>
             <th>The Boy Who Harnessed the Wind</th>
-            <td><img src="Images\The Boy Who Harnessed the Wind.jpg" alt="Book 1 Cover" width="100"></td>            <th>William Kamkwamba and Bryan Mealer</th>
+            <td><img src="images\The Boy Who Harnessed the Wind.jpg" alt="Book 1 Cover" width="100"></td>            <th>William Kamkwamba and Bryan Mealer</th>
             <td>A true story about a boy in Malawi named William Kamkwamba. 
                 He built a windmill using scrap materials in a junkyard to power has family's home
             </td>
         </tr>
         <tr>
             <th>Wonder</th>
-            <td><img src="Images\Wonder.png" alt="Book 2 Cover" width="100"></td>
+            <td><img src="images\Wonder.png" alt="Book 2 Cover" width="100"></td>
             <th>R. J. Palacio</th>
             <td>A ten year old boy named August Pullman living in Lower Manhattan is an ordinary kid, but with an extraordinary face.
                 He's born with Treacher Collins syndrome, resulting in a deformed face and needed multiple surgeries. He was homeschooled because of his condition until
@@ -75,13 +75,13 @@
 
         <tr>
             <th>Michael Jordan: The Life </th>
-            <td><img src="Images\Michael Jordan The Life.jpg" alt="Book 3 Cover" width="100"></td>
+            <td><img src="images\Michael Jordan The Life.jpg" alt="Book 3 Cover" width="100"></td>
             <th>Roland Lazenby</th>
             <td>Lazenby details Jordan's life off and on the court, describing his early life, rise to fame, his business endeavors, personal struggles, and life after basketball  </td>
         </tr>
         <tr>
             <th>The Maze Runner</th>
-            <td><img src="Images\The Maze Runner.jpg" alt="Book 4 Cover" width="100"></td>
+            <td><img src="images\The Maze Runner.jpg" alt="Book 4 Cover" width="100"></td>
             <th> James Dashner</th>
             <td>A boy named Thomas wakes up in a metal elevator that brings him to the Galde, a place enclosed by concrete walls. 
                 With Alby, Nwet, and others they try to escape the Maze outside the Glaze by getting past the Grievers, creatures made of metal and flesh, and reach the outside world.
