--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         <li><a href="https://adityad.sgedu.site/about_me.html">Assignment 1 cPanel</a></li>
         <li><a href="https://aditya655.github.io/CS-120-WebProgramming-Engineering/about_me.html">Assignment 1 GitHub</a></li>
         <li><a href="https://aditya655.github.io/CS-120-WebProgramming-Engineering/me_too.html">Assignment 2 CSS</a></li>
-        <li><a href="https://aditya655.github.io/CS-120-WebProgramming-Engineering/me_two.html">Assignment 3 GitHub</a></li>
+        <li><a href="https://aditya655.github.io/CS-120-WebProgramming-Engineering/me_two.html">Assignment me_two CSS GitHub</a></li>
         <li><a href="https://aditya655.github.io/CS-120-WebProgramming-Engineering/project1.html">Project 1</a></li>
     </ul>
 </body>
